--- a/src/app/components/admin-sidebar/admin-sidebar.component.css
+++ b/src/app/components/admin-sidebar/admin-sidebar.component.css
@@ -1,6 +1,9 @@
 :host {
     transition: all .5s ease;
     min-width: 280px;
+    display: flex;
+    flex-direction: column;
+    height:100vh;
 }
 
 a {
@@ -19,8 +22,8 @@ button {
 
 .sidenav {
     background-color: white;
-    
-    height: 100vh;
+    height:100%;
+    flex-grow: 1;
     box-shadow: 0.0rem 0 .75rem 0 #8690a3
 }
 
